EXTRA_DIST = \
            sp-init.c \
            sp-login-process-authn-response.c \
            sp-login-send-authn-request.c \
            sp-logout-process-idp-initiated-redirect-request.c \
            sp-logout-process-idp-initiated-soap-request.c \
            sp-logout-process-response.c \
            sp-logout-send-request.c

